<resources>
    <string name="app_name">TU4Sapp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Wische nach Links zum Registrieren</string>
    <string name="login">Anmelden</string>
    <string name="password">Passwort</string>
    <string name="e_mail">Email-Adresse</string>
    <string name="tagL">Bitte gib deine Anmeldedaten ein</string>
    <string name="tagR">Herzlich Willkommen \nBitte melde dich bei unserer App an, \nmit dieser App kannst du anderen helfen
        \noder du kannst Hilfe von anderen beanspruchen</string>
    <string name="swipe_right_for_login">Wische nach Rechts zum Anmelden</string>
    <string name="register">Registrieren</string>
    <string name="re_type_password">Bitte Passwort nochmal eingeben</string>
    <string name="your_name">Dein Benutzername</string>

    <string name="mysubjects_headingtext">Meine Fächer:</string>
    <string name="mysubjects_label_student">Nachhilfe erhalten:</string>
    <string name="mysubjects_label_teacher">Nachhilfe geben:</string>

    <string name="persondetails_header">Personen Detail:</string>
    <string name="persondetails_labelName">Name:</string>
    <string name="persondetails_labelClass">Klasse:</string>
    <string name="persondetails_labelDepartment">Abteilung:</string>
    <string name="persondetails_labelEmail">E-Mail:</string>
    <string name="persondetails_btnMail">E-Mail senden</string>
    <string name="persondetails_btnDiscord">Discord Chat öffnen</string>

    <string-array name="home_spinner">
        <item>Home</item>
        <item>Anmeldedaten</item>
        <item>Passwort ändern</item>
        <item>Fach Auswahl</item>
    </string-array>

    <string-array name="roles">
        <item>Schüler</item>
        <item>Lehrer</item>
    </string-array>

    <string-array name="classes">
        <item>1.Klasse</item>
        <item>2.Klasse</item>
        <item>3.Klasse</item>
        <item>4.Klasse</item>
        <item>5.Klasse</item>
    </string-array>

    <string-array name="departments">
        <item>Informatik</item>
        <item>Automatisierung</item>
        <item>Mechatronik</item>
        <item>Robotik</item>
        <item>Allgemein</item>
    </string-array>

    <string-array name="departmentsInformatics">
        <item>Informatik</item>
        <item>Allgemein</item>
    </string-array>

    <string-array name="departmentsAutomation">
        <item>Automatisierung</item>
        <item>Allgemein</item>
    </string-array>

    <string-array name="departmentsMechatronics">
        <item>Mechatronik</item>
        <item>Allgemein</item>
    </string-array>

    <string-array name="departmentsRobotics">
        <item>Robotik</item>
        <item>Allgemein</item>
    </string-array>

    <string-array name="subjects_informatics">
        <item>BWM</item>
        <item>POS</item>
        <item>NVS</item>
        <item>TINF</item>
        <item>DBI</item>
        <item>SYP</item>
        <item>VERT</item>
    </string-array>

    <string-array name="subjects_mechatronics">
        <item>Mechanik</item>
        <item>Elektrotechnik und Elektronik</item>
        <item>Wirtschaft und Recht</item>
        <item>Mechanische Systeme und Automatisierung</item>
        <item>Fertigungs- und Betriebstechnik</item>
        <item>Angewandte Informatik</item>
        <item>Konstruktion und Projektmanagement</item>
        <item>Laboratorium</item>
        <item>Werkstätte und Produktionstechnik</item>
    </string-array>

    <string-array name="subjects_automation">
        <item>Angewandte Informatik</item>
        <item>Wirtschaft und Recht</item>
        <item>Konstruktion und Projektmanagement</item>
        <item>Technische Mechanik und Berechnung</item>
        <item>Fertigungstechnik</item>
        <item>Maschinen und Anlagen</item>
        <item>Automatisierungstechnik</item>
        <item>Elektrotechnik und Elektronik</item>
        <item>Robotik</item>
        <item>Laboratorium</item>
        <item>Werkstätte und Produktionstechnik</item>
        <item>Programmieren</item>
    </string-array>

    <string-array name="subjects_robotics">
        <item>Wirtschaft und Recht</item>
        <item>Mechanik und Elemente des Maschinenbaus</item>
        <item>Elektrotechnik und Elektronik</item>
        <item>Mechanische Systeme und Automatisierung</item>
        <item>Fertigungs- und Betriebstechnik</item>
        <item>Angewandte Informatik</item>
        <item>Konstruktion und Projektmanagement</item>
        <item>Laboratorium</item>
        <item>Werkstätte und Produktionstechnik</item>
        <item>Robotik</item>
    </string-array>

    <string-array name="subjects">
        <item>Mathematik</item>
        <item>Deutsch</item>
        <item>Englisch</item>
        <item>NAWI</item>
        <item>GGP</item>
    </string-array>

    <string-array name="auswahl">
        <item>Lehrer</item>
        <item>Schüler</item>
    </string-array>


</resources>