<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mysubjects_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/mysubjects_headingtext"
            android:fontFamily="@font/indigo_daisy"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="5sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/linearlayout_border"
            android:padding="5sp">

            <TextView
                android:id="@+id/label_student_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mysubjects_label_student"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@color/colorPrimary"
                android:padding="5sp"/>

            <ListView
                android:id="@+id/mysubjects_Student_listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/linearlayout_border"
            android:padding="5sp">

            <TextView
                android:id="@+id/label_teacher_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mysubjects_label_teacher"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@color/colorPrimary"
                android:padding="5sp"/>

            <ListView
                android:id="@+id/mysubjects_Teacher_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false">

            </ListView>
        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>